# waku-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: launch.json
.github/: FUNDING.yml
.github/workflows/: validate-skills.yml
docs/: DEMO-CHECKLIST.md  architecture.md  good-first-issues.md
evals/: helpers.py
evals/deterministic/: test_tool_trigger.py  test_wake_word.py
evals/judge/: anthropic_judge.py  test_response_quality.py
jarvis/: __main__.py  app.py
jarvis/gateway/: cli.py  telegram.py  voice.py
jarvis/ops/: dashboard.py  release_gate.py
jarvis/ops/static/: app.js  index.html
jarvis/runtime/: session.py
jarvis/tools/: __init__.py  calendar.py  experimental.py
learning/: learning.md
learning/playground/: README.md
learning/playground/project_demos/agent_turn/: 00_README.md  01_full_agent_turn_demo.py  02_iteration_guardrail_demo.py
learning/src/evals/: helpers.md  learning.md
learning/src/evals/deterministic/: test_tool_trigger.md
learning/src/evals/judge/: anthropic_judge.md  test_response_quality.md
learning/src/waku/: app.md  db.md  learning.md
learning/src/waku/loop/: agent.md  models.md
learning/src/waku/memory/: __init__.md  consolidation.md  retrieval_gate.md
learning/src/waku/ops/: tracing.md
learning/src/waku/runtime/: session.md
learning/test/: test_models_protocol_flow.py  test_retrieval_gate_flow.py
scripts/: validate_skills.py
skills/: TEMPLATE.md
skills/community/: README.md
skills/schedule-meeting/: SKILL.md
waku/: app.py  db.py
waku/loop/: agent.py  models.py
waku/memory/: __init__.py  consolidation.py  retrieval_gate.py
waku/ops/: tracing.py
waku/runtime/: session.py
waku/tools/: __init__.py  calendar.py  registry.py
(+3 files in other folders)
